@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?><footer>
 	<websiteowner>Toenda Software Development</websiteowner>
 	<owner_url>http://www.toenda.com</owner_url>
-	<copyright>2007</copyright>
+	<copyright>2003 - 2007</copyright>
 	<email>info@toenda.com</email>
 	<show_tcmslogo>0</show_tcmslogo>
 	<show_defaultfooter>0</show_defaultfooter>
