@@ -8,7 +8,7 @@
 	<front_lang>germany_DE</front_lang>
 	<description></description>
 	<currency>EUR</currency>
-	<toendacms_in_sitetitle>0</toendacms_in_sitetitle>
+	<toendacms_in_sitetitle>1</toendacms_in_sitetitle>
 	<default_category>erdf4</default_category>
 	<topmenu_active>1</topmenu_active>
 	<statistics>0</statistics>
@@ -17,7 +17,7 @@
 	<seo_format>1</seo_format>
 	<site_offline>0</site_offline>
 	<site_offline_text>This site is down for maintenance.<br /> Please check back again soon.</site_offline_text>
-	<show_top_pages></show_top_pages>
+	<show_top_pages>1</show_top_pages>
 	<cipher_email>1</cipher_email>
 	<js_browser_detect>1</js_browser_detect>
 	<use_cs>1</use_cs>
@@ -25,16 +25,16 @@
 	<captcha_clean_size>1024</captcha_clean_size>
 	<show_doc_autor>0</show_doc_autor>
 	<admin_topmenu>0</admin_topmenu>
-	<pathway_char>></pathway_char>
+	<pathway_char>/</pathway_char>
 	<anti_frame>1</anti_frame>
-	<revisit_after>2</revisit_after>
+	<revisit_after>1</revisit_after>
 	<robotsfile>http://www.toenda.com/robots.txt</robotsfile>
 	<pdflink>1</pdflink>
 	<cachecontrol>no-cache, must-revalidate</cachecontrol>
 	<pragma>no-cache</pragma>
 	<expires>1</expires>
 	<robots>index, follow</robots>
-	<last_changes>2007-03-04 14:17:43</last_changes>
+	<last_changes>2007-07-01 16:58:10</last_changes>
 	<use_content_language>1</use_content_language>
 	<valid_links>1</valid_links>
 
